--- a/main.html
+++ b/main.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>123</h1>
+    <h1>Git Test</h1>
+    <h2>2023.07.14</h2>
+
+    <script src="./main.js"></script>
 </body>
 </html>
